[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Dialogs/OutlineDialog.gd" type="Script" id=1]

[node name="OutlineDialog" type="ConfirmationDialog"]
visible = true
margin_right = 200.0
margin_bottom = 70.0
script = ExtResource( 1 )

[node name="OptionsContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -52.0
margin_right = 121.0
margin_bottom = 24.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="ThickLabel" type="Label" parent="OptionsContainer"]
margin_top = 5.0
margin_right = 90.0
margin_bottom = 19.0
text = "Thickness:"

[node name="ThickValue" type="SpinBox" parent="OptionsContainer"]
margin_left = 94.0
margin_right = 242.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 16384.0
value = 1.0
suffix = "px"

[node name="OutlineColorLabel" type="Label" parent="OptionsContainer"]
margin_top = 31.0
margin_right = 90.0
margin_bottom = 45.0
text = "Fill with color:"

[node name="OutlineColor" type="ColorPickerButton" parent="OptionsContainer"]
margin_left = 94.0
margin_top = 28.0
margin_right = 242.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 20 )
color = Color( 1, 0, 0, 1 )

[node name="DiagonalCheckBox" type="CheckBox" parent="OptionsContainer"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
text = "Diagonal"

[node name="InsideImageCheckBox" type="CheckBox" parent="OptionsContainer"]
margin_left = 94.0
margin_top = 52.0
margin_right = 242.0
margin_bottom = 76.0
mouse_default_cursor_shape = 2
text = "Place inside image"
[connection signal="confirmed" from="." to="." method="_on_OutlineDialog_confirmed"]
